--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.youtube</groupId>
-    <artifactId>jwt</artifactId>
+    <artifactId>ecommerce</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>jwt-authenticate</name>
-    <description>Jwt token generation</description>
+    <name>ecommerce</name>
+    <description>Ecommerce api's</description>
     <properties>
         <java.version>1.8</java.version>
     </properties>
