--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=9090
-spring.datasource.url=jdbc:mysql://localhost:3306/jwt_db
+spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce
 spring.datasource.username=root
 spring.datasource.password=Beny@400
 spring.datasource.platform=mysql
